
[TestVarDecls - 1]
compiler.CompilerOutput{
    Errors: {
    },
    JS:        "const foo = 5;\nlet bar = \"hello\";\n//# sourceMappingURL=./input.esc.map\n",
    SourceMap: "{\"version\":3,\"file\":\"./input.js\",\"sources\":[\"./input.esc\"],\"sourcesContent\":[null],\"names\":[],\"mappings\":\"AAAA,YAAU;AACV,UAAU\"}",
}
---

[TestFuncDecls - 1]
compiler.CompilerOutput{
    Errors: {
    },
    JS:        "function add(a, b) {\n  return a + b;\n}\nfunction sub(a, b) {\n  return a - b;\n}\nconst sum = add(1, 2);\n//# sourceMappingURL=./input.esc.map\n",
    SourceMap: "{\"version\":3,\"file\":\"./input.js\",\"sources\":[\"./input.esc\"],\"sourcesContent\":[null],\"names\":[],\"mappings\":\"AAAA;EACE,OAAO,AAAA,IAAI;;AAEb;EAAe,OAAO,AAAA,IAAI;;AAC1B,YAAU,AAAA,IAAI,GAAG\"}",
}
---

[TestArrays - 1]
compiler.CompilerOutput{
    Errors: {
    },
    JS:        "const nums = [1, 2, 3];\nconst first = nums[0];\n//# sourceMappingURL=./input.esc.map\n",
    SourceMap: "{\"version\":3,\"file\":\"./input.js\",\"sources\":[\"./input.esc\"],\"sourcesContent\":[null],\"names\":[],\"mappings\":\"AAAA,aAAW,CAAC,GAAG,GAAG;AAClB,cAAY,AAAA,KAAK\"}",
}
---

[TestMemberAccess - 1]
compiler.CompilerOutput{
    Errors: {
    },
    JS:        "console.log(\"x =\", -5);\n//# sourceMappingURL=./input.esc.map\n",
    SourceMap: "{\"version\":3,\"file\":\"./input.js\",\"sources\":[\"./input.esc\"],\"sourcesContent\":[null],\"names\":[],\"mappings\":\"AAAA,AAAA,AAAA,QAAQ,IAAI,OAAM,CAAC\"}",
}
---
